fix mozilla scrollbar

--- a/css/style.scss
+++ b/css/style.scss
@@ -534,6 +534,9 @@ h3.popup {
 .scrollable {
   height: 100%;
   overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: rgba(0, 0, 0, 0.3) rgba(0, 0, 0, 0);
+
 }
 
 
